...
                    .resizable()
                    .aspectRatio(contentMode: .fit)
                    .padding(3)
                    .background(.red)
                    .clipShape(Circle())
                    .frame(width: 24, height: 24)
                NavigationLink("All", value: PostsModel(path: "All"))
            }
            HStack {
                Image(systemName: "antenna.radiowaves.left.and.right.slash")
                    .resizable()
                    .aspectRatio(contentMode: .fit)
                    .padding(3)
...
