...
                CommmunityListComponent(communities: searchModel.communities, rising: true)
            }
            .frame(maxHeight: typing ? 0 : .infinity)
            .clipped()
        }
        .background(selectedTheme.backgroundColor)
        .navigationBarTitle("Search", displayMode: .inline)
        .toolbar {
            ToolbarItem(placement: .principal) {
                TextField("Search", text: $query) {
                    if query != "" {
                        navModel.path.append(SearchedModel(query: query, searchType: .Posts))
                    }
...
